// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/STRING.proto";


package connection.protobuf;

message FlowInfo {
extensions 3 to 103;

  optional ccsds_mal.protobuf.STRING name = 1;
  optional ccsds_mal.protobuf.BOOLEAN isDefault = 2;
}
